2016-01-23  Simon Marchi  <simon.marchi@ericsson.com>

	* lib/remote.exp (standard_file): Reverse return logic for remote
	exists case.

2016-01-23  Simon Marchi  <simon.marchi@ericsson.com>

	* lib/remote.exp (standard_file); Add else clause.

2016-01-16  Ben Elliston  <bje@gnu.org>

	* runtest.exp (runtest): Improve comment about --status.

2016-01-12  Simon Marchi  <simon.marchi@ericsson.com>

	* lib/remote.exp (standard_file): The [ operator does not actually
	output anything. It returns 0 or 1 as its exit code, so "exit `[
	-f $file ]`" always expands to "exit " (equivalent to exit 0).
	Instead, use test(1) to check for file existence.

2015-12-20  Ben Elliston  <bje@gnu.org>

	* doc/dejagnu.xml: Begin overhauling.
	* doc/ref.xml: Likewise.
	* doc/user.xml: Likewise.
	* doc/dejagnu.texi: Regenerate.

2015-12-20  Ben Elliston  <bje@gnu.org>

	* doc/runtest.1: Miscellaneous minor improvements.

2015-12-09  Yoshinori Sato  <ysato@users.sourceforge.jp>

	* Makefile.am (baseboard_DATA): Add missing rx-sim.exp.
	* Makefile.in: Regenerate.

2015-11-16  Brooks Moses  <bmoses@google.com>

	* config/unix.exp: Add ability to set test timeout from site.exp.
	* doc/user.xml: Document new test_timeout variable in site.exp.
	* doc/dejagnu.texi: Regenerate.

2015-11-16  Ben Elliston  <bje@gnu.org>

	* testsuite/runtest.all/options.exp: Re-enable --strace 1 test.

2015-11-16  Ben Elliston  <bje@gnu.org>

	* testsuite/runtest.all/options.exp: Remove some commented code.

2015-11-16  Ben Elliston  <bje@gnu.org>

	* runtest.exp: Refer to "DejaGnu version", not "Framework
	version" in --version output.
	* testsuite/runtest.all/options.exp: Update test case.

2015-11-14  Ben Elliston  <bje@gnu.org>

	* runtest.exp (usage): Improve help text.

2015-11-12  Ben Elliston  <bje@gnu.org>

	* runtest.exp (usage): Sort options in usage.

2015-11-12  Ben Elliston  <bje@gnu.org>

	* lib/framework.exp (note): Remove old commented-out code.

2015-11-11  Ben Elliston  <bje@gnu.org>
