@@ -1,3 +1,9 @@
+2016-02-14  Steve Ellcey  <sellcey@mips.com>
+
+	* baseboards/multi-sim.exp (dynamic_linker_flag): Check
+	GCC_UNDER_TEST.
+	* baseboards/multi-sim.exp (rpath_flags): Ditto.
+
 2016-01-23  Simon Marchi  <simon.marchi@ericsson.com>
 
 	* lib/remote.exp (standard_file): Reverse return logic for remote
